Added cargo metadata

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "otp_generator"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+description = "Otp generator"
+keywords= ["otp", "password"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
